--- a/index.html
+++ b/index.html
@@ -351,7 +351,8 @@
                                                     and Africa , ranging from startups to Fortune 500 companies .</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL
+                                                    SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -376,7 +377,8 @@
                                                     tortor.</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL
+                                                    SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -401,7 +403,8 @@
                                                     tortor.</p>
                                             </div>
                                             <div class="herobanner__button">
-                                                <a class="default__button" href="javascript:void(0);">OUR ALL SERVICES</a>
+                                                <a class="default__button" href="javascript:void(0);">OUR ALL
+                                                    SERVICES</a>
                                             </div>
                                         </div>
                                     </div>
@@ -479,7 +482,8 @@
                                 achieve your organization’s optimum and make your mark in your field.
 
                             </p>
-                            <a href="javascript:void(0);" class="default__button mt-3"><i class="bi bi-calendar-check"></i> Book Free
+                            <a href="javascript:void(0);" class="default__button mt-3"><i
+                                    class="bi bi-calendar-check"></i> Book Free
                                 Consultation</a>
                         </div>
                     </div>
@@ -1136,7 +1140,8 @@
                         <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
                             <div class="project__bottom__text">
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor <a
-                                        href="javascript:void(0);">incididunt ut labore et dolore magna aliqua.</a> Ut enim ad minim
+                                        href="javascript:void(0);">incididunt ut labore et dolore magna aliqua.</a> Ut
+                                    enim ad minim
                                     veniam, quis nostrud exercitation.</p>
                             </div>
                         </div>
@@ -1167,7 +1172,7 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
+                    <!-- <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="testimonial__img" data-tilt>
                             <img src="assets/img/testimonial/testimonial__1.png" alt="">
                             <div class="testimonial__img__2">
@@ -1177,8 +1182,8 @@
                                 <img src="assets/img/testimonial/testimonial__small__img__2.png" alt="">
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xl-9 col-lg-9 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="2000">
+                    </div> -->
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" data-aos="fade-up" data-aos-duration="2000">
 
                         <div class="testimonial__inner position-relative">
 
@@ -1199,14 +1204,14 @@
                                                 always available to address any concerns. Highly recommend!”</p>
                                         </div>
                                         <div class="testimonial__bottom">
+                                            <div class="testimonial__3__img">
+                                                <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
+                                            </div>
                                             <div class="testimonial__author">
-                                                <h6><a href="#">Mattie Warner</a></h6>
+                                                <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                                 <span>Founder & CEO</span>
                                             </div>
 
-                                        </div>
-                                        <div class="testimonial__small__img">
-                                            <img src="assets/img/testimonial/testimonial__small__img.png" alt="">
                                         </div>
                                     </div>
                                     <div class="testimonial__single__slider swiper-slide">
@@ -1224,12 +1229,12 @@
                                                 and the support they provide is exceptional.”</p>
                                         </div>
                                         <div class="testimonial__bottom">
-                                            <div class="testimonial__author">
-                                                <h6><a href="#">Mattie Warner</a></h6>
-                                                <span>Founder & CEO</span>
+                                            <div class="testimonial__3__img">
+                                                <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
                                             </div>
-                                            <div class="testimonial__small__img">
-                                                <img src="assets/img/testimonial/testimonial__small__img.png" alt="">
+                                            <div class="testimonial__author">
+                                                <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
+                                                <span>Founder & CEO</span>
                                             </div>
                                         </div>
                                     </div>
@@ -1249,8 +1254,11 @@
                                                 recommended!”</p>
                                         </div>
                                         <div class="testimonial__bottom">
+                                            <div class="testimonial__3__img">
+                                                <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
+                                            </div>
                                             <div class="testimonial__author">
-                                                <h6><a href="#">Reshma Saujani</a></h6>
+                                                <h6><a href="javascript:void(0);">Reshma Saujani</a></h6>
                                                 <span>Founder & CEO</span>
                                             </div>
                                             <div class="testimonial__small__img">
@@ -1274,8 +1282,11 @@
                                             </p>
                                         </div>
                                         <div class="testimonial__bottom">
+                                            <div class="testimonial__3__img">
+                                                <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
+                                            </div>
                                             <div class="testimonial__author">
-                                                <h6><a href="#">Mattie Warner</a></h6>
+                                                <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                                 <span>Founder & CEO</span>
                                             </div>
                                             <div class="testimonial__small__img">
@@ -1299,8 +1310,14 @@
                                                 brand.”</p>
                                         </div>
                                         <div class="testimonial__bottom">
+                                            <div class="testimonial__3__img">
+                                                <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
+                                            </div>
                                             <div class="testimonial__author">
-                                                <h6><a href="#">Mattie Warner</a></h6>
+                                                <div class="testimonial__3__img">
+                                                    <img src="assets/img/client/Reshma_Saujani.webp" alt="img-fluid">
+                                                </div>
+                                                <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                                 <span>Founder & CEO</span>
                                             </div>
                                             <div class="testimonial__small__img">
