--- a/project.html
+++ b/project.html
@@ -329,7 +329,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/roi.224.png" alt="">
+                                <img src="assets/img/project/roi.224.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -337,7 +337,7 @@
                                             Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -356,14 +356,14 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1700">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/resume-builder.328.png" alt="">
+                                <img src="assets/img/project/resume-builder.328.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://app.thepathfinderhub.com/">Resume Builder</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -382,7 +382,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="1900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/shortlistme.405.png" alt="">
+                                <img src="assets/img/project/shortlistme.405.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -390,7 +390,7 @@
                                             ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -409,14 +409,14 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2100">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/super.720.png" alt="">
+                                <img src="assets/img/project/super.720.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://superbullionwire.com/">Super Bullion Wire</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -435,7 +435,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2300">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/global-wordpress.689.png" alt="">
+                                <img src="assets/img/project/global-wordpress.689.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -443,7 +443,7 @@
                                             UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -462,7 +462,7 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2500">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/amberoil.732.png" alt="">
+                                <img src="assets/img/project/amberoil.732.png" alt="img">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
@@ -470,7 +470,7 @@
                                             Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -497,7 +497,7 @@
                                             MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -516,14 +516,14 @@
                     <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 col-12" data-aos="fade-up" data-aos-duration="2900">
                         <div class="project__single single__transform">
                             <div class="project__img">
-                                <img src="assets/img/project/1122.Screenshot - 2024-11-26T231854.979.png" alt="">
+                                <img src="assets/img/project/1122.Screenshot - 2024-11-26T231854.979.png" alt="image">
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
                                     <h3><a href="https://www.ikc.ie/">Home | The Irish Kennel Club</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="blog-details.html"><svg width="34"
+                                    <a class="direction__btn direction__btn--2" href="blog-details"><svg width="34"
                                             height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -577,10 +577,10 @@
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -589,17 +589,17 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
                                         <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                             tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                             laboris nisi ut aliquip ex ea commodo.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Kristin Gilbert</a></h6>
+                                            <h6><a href="javascript:void(0);">Kristin Gilbert</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -608,17 +608,17 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
                                         <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                             tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                             laboris nisi ut aliquip ex ea commodo.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__6.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__6.png" alt="img-fluid">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Arlene Miles</a></h6>
+                                            <h6><a href="javascript:void(0);">Arlene Miles</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -627,17 +627,17 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
                                         <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                             tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                             laboris nisi ut aliquip ex ea commodo.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__4.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__4.png" alt="img-fluid">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -646,17 +646,17 @@
 
                             <div class="testimonial__3__single__wraper swiper-slide col-md-4">
                                 <div class="testimonial__3__single__inner">
-                                    <div class="testimonial__3__content bg__pink common__gradient__bg ">
+                                    <div class="testimonial__3__content bg__pink common__gradient__bg">
                                         <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                                             tempor aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                                             laboris nisi ut aliquip ex ea commodo.”</p>
                                     </div>
                                     <div class="testimonial__3__author">
                                         <div class="testimonial__3__img">
-                                            <img src="assets/img/testimonial/testimonial__5.png" alt="">
+                                            <img src="assets/img/testimonial/testimonial__5.png" alt="img-fluid">
                                         </div>
                                         <div class="testimonial__3__name color__black">
-                                            <h6><a href="#">Mattie Warner</a></h6>
+                                            <h6><a href="javascript:void(0);">Mattie Warner</a></h6>
                                             <p>Business Man</p>
                                         </div>
                                     </div>
@@ -718,7 +718,7 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="index.html">
+                    <a href="index">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -732,7 +732,7 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <img src="assets/img/logo/full-logo.svg" alt="">
+                                    <img src="assets/img/logo/full-logo.svg" alt="logo-img">
                                 </div>
                                 <div class="footer__text">
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
