--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Contact | Digital Minds on- Business Consulting HTML Template</title>
+    <title>Contact | Digital Minds on</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -308,28 +308,17 @@
                                 </div>
                                 <div class="breadcrumbarea__inner">
                                     <ul>
-                                        <li><a href="index.html">Home</a></li>
+                                        <li><a href="index">Home</a></li>
                                         <li>// </li>
                                         <li> Contact Us </li>
                                     </ul>
                                 </div>
                             </div>
-
-
-
                         </div>
                     </div>
                 </div>
-
-
-
             </div>
             <!-- breadcrumbarea__end -->
-
-
-
-
-
             <!-- contact__section__start -->
             <div class="contact sp_top_140 sp_bottom_80">
                 <div class="container">
