--- a/content-creater.html
+++ b/content-creater.html
@@ -21,7 +21,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
+    <!-- title scrollbar -->
+    <script>
+        // Text for the title
+        let titleText = "Professional Content Creation Agency | Digital Minds On";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
 
 
     <script>
@@ -837,7 +848,9 @@
                                             <a href="#"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="icofont-twitter"></i></a>
+                                            <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                <i class="icofont-instagram"></i>
+                                            </a>
                                         </li>
                                         <li>
                                             <a href="#"><i class="icofont-skype"></i></a>
