--- a/index.html
+++ b/index.html
@@ -19,8 +19,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-
-
+    <!-- title scrollbar -->
+    <script>
+        // Text for the title
+        let titleText = "Digital Minds On | Web & App Development | E-commerce | Graphic Design";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
 
     <script>
         if (
@@ -1546,13 +1556,19 @@
                                 <div class="footer__icon">
                                     <ul>
                                         <li>
-                                            <a href="#"><i class="icofont-facebook"></i></a>
+                                            <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                target="_blank">
+                                                <i class="icofont-facebook"></i>
+                                            </a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="icofont-twitter"></i></a>
+                                            <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                <i class="icofont-instagram"></i>
+                                            </a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="icofont-skype"></i></a>
+                                            <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                    class="icofont-skype"></i></a>
                                         </li>
                                         <li>
                                             <a href="#"><i class="icofont-linkedin"></i></a>
