--- a/project.html
+++ b/project.html
@@ -307,7 +307,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index">Home</a></li>
                                     <li>// </li>
                                     <li> All Project </li>
                                 </ul>
