--- a/error.html
+++ b/error.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Error | Bastun- Business Consulting HTML Template</title>
+    <title>Error | Digital Minds on</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
