--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 ">
                                         <div class="herobanner__img herobanner__img--position">
-                                            <img src="assets/img/herobaner/herobanner__front__1.png" alt="Hero Banner">
+                                            <img src="assets/img/team/slider/ahmad _home-owner.png" alt="Hero Banner">
                                         </div>
                                     </div>
                                 </div>
