--- a/index.html
+++ b/index.html
@@ -1571,7 +1571,10 @@
                                                     class="icofont-skype"></i></a>
                                         </li>
                                         <li>
-                                            <a href="#"><i class="icofont-linkedin"></i></a>
+                                            <a href="https://www.linkedin.com/company/digital-minds-on"
+                                                target="_blank">
+                                                <i class="icofont-linkedin"></i>
+                                            </a>
                                         </li>
                                     </ul>
                                 </div>
