--- a/services.html
+++ b/services.html
@@ -333,8 +333,8 @@
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
-                                    <a class="default__button" href="#">GET FREE QUATE</a>
-                                    <a class="default__button" href="#">Contact</a>
+                                    <a class="default__button" href="request-quote">GET FREE QUATE</a>
+                                    <a class="default__button" href="contact">Contact</a>
                                 </ul>
                             </div>
                         </div>
