--- a/services.html
+++ b/services.html
@@ -315,7 +315,7 @@
                                 <h2 class="heading">Digital Minds ON Service Provider </h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;">At Digital Minds On, we create CMS
+                                <p class="banner-width" style="max-width: 100%;">At Digital Minds On, we create CMS
                                     websites that do exactly what they promise. We design online stores that would fit
                                     right in on Rodeo Drive. We develop web applications that push the limits of what's
                                     possible. But above all, we take the greatest pride in handing over the keys to our
@@ -334,7 +334,7 @@
                             <div class="banner-button">
                                 <ul class="common-button">
                                     <a class="default__button" href="request-quote">GET FREE QUATE</a>
-                                    <a class="default__button" href="contact">Contact</a>
+                                    <a class="default__button" href="contact">Contact Us</a>
                                 </ul>
                             </div>
                         </div>
