--- a/services.html
+++ b/services.html
@@ -201,7 +201,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="quate-request">GET FREE QUATE</a>
+                                        <a class="default__button" href="request-quote">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
