--- a/index.html
+++ b/index.html
@@ -1614,19 +1614,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="#">Privacy & policy</a>
+                                            <a href="javascript:void(0);">Privacy & policy</a>
                                         </li>
                                         <li>
-                                            <a href="#">Terms & conditions</a>
+                                            <a href="javascript:void(0);">Terms & conditions</a>
                                         </li>
                                         <li>
-                                            <a href="#">FAQ</a>
+                                            <a href="javascript:void(0);">FAQ</a>
                                         </li>
                                         <li>
-                                            <a href="#">Customer support</a>
+                                            <a href="javascript:void(0);">Customer support</a>
                                         </li>
                                         <li>
-                                            <a href="#">Contact us</a>
+                                            <a href="contact">Contact us</a>
                                         </li>
                                     </ul>
                                 </div>
