--- a/index.html
+++ b/index.html
@@ -1620,7 +1620,7 @@
                                             <a href="javascript:void(0);">Terms & conditions</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">FAQ</a>
+                                            <a href="faq">FAQ</a>
                                         </li>
                                         <li>
                                             <a href="javascript:void(0);">Customer support</a>
