--- a/index.html
+++ b/index.html
@@ -1588,19 +1588,19 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="#">Home</a>
+                                            <a href="index">Home</a>
                                         </li>
                                         <li>
-                                            <a href="#">About us</a>
+                                            <a href="about">About us</a>
                                         </li>
                                         <li>
-                                            <a href="#">Blog update</a>
+                                            <a href="blog">Blog update</a>
                                         </li>
                                         <li>
-                                            <a href="#">Our services</a>
+                                            <a href="services">Our services</a>
                                         </li>
                                         <li>
-                                            <a href="#">Testimonial</a>
+                                            <a href="javascript:void(0);">Testimonial</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -1623,7 +1623,7 @@
                                             <a href="faq">FAQ</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0);">Customer support</a>
+                                            <a href="contact">Customer support</a>
                                         </li>
                                         <li>
                                             <a href="contact">Contact us</a>
@@ -1641,7 +1641,7 @@
                                     <input type="text" placeholder="Enter your email:">
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="#">SUBSCRIBE NOW</a>
+                                    <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
                                 </div>
                             </div>
                         </div>
