--- a/blog-details.html
+++ b/blog-details.html
@@ -358,38 +358,44 @@
                                 <div class="sidebar__list">
                                     <ul>
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Strategic Planning
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Strategic
+                                                Planning
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Market Entry Strategy
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Market Entry
+                                                Strategy
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Business Process optimization
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Business
+                                                Process optimization
 
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Financial Restructuring
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Financial
+                                                Restructuring
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Cost Reduction Analysis
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Cost Reduction
+                                                Analysis
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
 
                                         <li>
-                                            <a class="sidebar__common__input" href="javascript:void(0);">Supply Chain Optimization
+                                            <a class="sidebar__common__input" href="javascript:void(0);">Supply Chain
+                                                Optimization
                                                 <i class="icofont-rounded-right"></i>
                                             </a>
                                         </li>
@@ -721,23 +727,31 @@
                                         <img src="assets/img/logo/full-logo.svg" alt="">
                                     </div>
                                     <div class="footer__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt labore et dolore magna aliqua</p>
+                                        <p>Trusted software, web, and app development company delivering innovative
+                                            solutions to empower businesses with cutting-edge technology.</p>
                                     </div>
                                     <div class="footer__icon">
                                         <ul>
                                             <li>
-                                                <a href="javascript:void(0);"><i class="icofont-facebook"></i></a>
+                                                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                    target="_blank">
+                                                    <i class="icofont-facebook"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0);"><i class="icofont-twitter"></i></a>
+                                                <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                    <i class="icofont-instagram"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0);"><i class="icofont-skype"></i></a>
+                                                <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                        class="icofont-skype"></i></a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0);"><i class="icofont-linkedin"></i></a>
+                                                <a href="https://www.linkedin.com/company/digital-minds-on"
+                                                    target="_blank">
+                                                    <i class="icofont-linkedin"></i>
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -785,10 +799,10 @@
                                                 <a href="javascript:void(0);">Terms & conditions</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0);">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="javascript:void(0);">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
                                                 <a href="contact">Contact us</a>
