--- a/project-details.html
+++ b/project-details.html
@@ -730,30 +730,37 @@
                                         <img src="assets/img/logo/full-logo.svg" alt="">
                                     </div>
                                     <div class="footer__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt labore et dolore magna aliqua</p>
+                                        <p>Trusted software, web, and app development company delivering innovative
+                                            solutions to empower businesses with cutting-edge technology.</p>
                                     </div>
                                     <div class="footer__icon">
                                         <ul>
                                             <li>
-                                                <a href="#"><i class="icofont-facebook"></i></a>
+                                                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                    target="_blank">
+                                                    <i class="icofont-facebook"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-twitter"></i></a>
+                                                <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                    <i class="icofont-instagram"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-skype"></i></a>
+                                                <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                        class="icofont-skype"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-linkedin"></i></a>
+                                                <a href="https://www.linkedin.com/company/digital-minds-on"
+                                                    target="_blank">
+                                                    <i class="icofont-linkedin"></i>
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
-                                data-aos-duration="2000">
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2000">
                                 <div class="footer__widget footer__support">
                                     <div class="footer__menu__title">
                                         <h6>SUPPORT :</h6>
@@ -761,26 +768,25 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Home</a>
+                                                <a href="index">Home</a>
                                             </li>
                                             <li>
-                                                <a href="#">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="#">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="#">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="#">Testimonial</a>
+                                                <a href="javascript:void(0);">Testimonial</a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up"
-                                data-aos-duration="2500">
+                            <div class="col-xl-2 col-lg-6 col-md-6 col-sm-6" data-aos="fade-up" data-aos-duration="2500">
                                 <div class="footer__widget footer__quick">
                                     <div class="footer__menu__title">
                                         <h6>QUICK LINKS :</h6>
@@ -788,26 +794,25 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Privacy & policy</a>
+                                                <a href="javascript:void(0);">Privacy & policy</a>
                                             </li>
                                             <li>
-                                                <a href="#">Terms & conditions</a>
+                                                <a href="javascript:void(0);">Terms & conditions</a>
                                             </li>
                                             <li>
-                                                <a href="#">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="#">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up"
-                                data-aos-duration="3000">
+                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" data-aos="fade-up" data-aos-duration="3000">
                                 <div class="footer__widget footer__right">
                                     <div class="footer__menu__title">
                                         <h6>SUBSCRIP NEWSLETTER :</h6>
@@ -816,7 +821,7 @@
                                         <input type="text" placeholder="Enter your email:">
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="#">SUBSCRIBE NOW</a>
+                                        <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
                                     </div>
                                 </div>
                             </div>
