--- a/software-development-services.html
+++ b/software-development-services.html
@@ -21,18 +21,18 @@
     <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
-  <!-- title scrollbar -->
-  <script>
-    // Text for the title
-    let titleText = "Custom Software Development Services | Digital MInds On";
-    let index = 0;
-    function scrollTitle() {
-        document.title = titleText.slice(index) + titleText.slice(0, index);
-        index = (index + 1) % titleText.length;
-    }
-    setInterval(scrollTitle, 200); 
-</script>
-<!-- title scrollbar -->
+    <!-- title scrollbar -->
+    <script>
+        // Text for the title
+        let titleText = "Custom Software Development Services | Digital MInds On";
+        let index = 0;
+        function scrollTitle() {
+            document.title = titleText.slice(index) + titleText.slice(0, index);
+            index = (index + 1) % titleText.length;
+        }
+        setInterval(scrollTitle, 200); 
+    </script>
+    <!-- title scrollbar -->
 
 
     <script>
@@ -885,23 +885,31 @@
                                         <img src="assets/img/logo/full-logo.svg" alt="">
                                     </div>
                                     <div class="footer__text">
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                            tempor
-                                            incididunt labore et dolore magna aliqua</p>
+                                        <p>Trusted software, web, and app development company delivering innovative
+                                            solutions to empower businesses with cutting-edge technology.</p>
                                     </div>
                                     <div class="footer__icon">
                                         <ul>
                                             <li>
-                                                <a href="#"><i class="icofont-facebook"></i></a>
+                                                <a href="https://www.facebook.com/login/?next=https%3A%2F%2Fwww.facebook.com%2Fdifitalmindson"
+                                                    target="_blank">
+                                                    <i class="icofont-facebook"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-twitter"></i></a>
+                                                <a href="https://www.instagram.com/digitalmindson/" target="_blank">
+                                                    <i class="icofont-instagram"></i>
+                                                </a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-skype"></i></a>
+                                                <a href="skype:live:.cid.a40e7b5b65a42e46?chat" target="_blank"><i
+                                                        class="icofont-skype"></i></a>
                                             </li>
                                             <li>
-                                                <a href="#"><i class="icofont-linkedin"></i></a>
+                                                <a href="https://www.linkedin.com/company/digital-minds-on"
+                                                    target="_blank">
+                                                    <i class="icofont-linkedin"></i>
+                                                </a>
                                             </li>
                                         </ul>
                                     </div>
@@ -916,19 +924,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Home</a>
+                                                <a href="index">Home</a>
                                             </li>
                                             <li>
-                                                <a href="#">About us</a>
+                                                <a href="about">About us</a>
                                             </li>
                                             <li>
-                                                <a href="#">Blog update</a>
+                                                <a href="blog">Blog update</a>
                                             </li>
                                             <li>
-                                                <a href="#">Our services</a>
+                                                <a href="services">Our services</a>
                                             </li>
                                             <li>
-                                                <a href="#">Testimonial</a>
+                                                <a href="javascript:void(0);">Testimonial</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -943,19 +951,19 @@
                                     <div class="footer__menu">
                                         <ul>
                                             <li>
-                                                <a href="#">Privacy & policy</a>
+                                                <a href="javascript:void(0);">Privacy & policy</a>
                                             </li>
                                             <li>
-                                                <a href="#">Terms & conditions</a>
+                                                <a href="javascript:void(0);">Terms & conditions</a>
                                             </li>
                                             <li>
-                                                <a href="#">FAQ</a>
+                                                <a href="faq">FAQ</a>
                                             </li>
                                             <li>
-                                                <a href="#">Customer support</a>
+                                                <a href="contact">Customer support</a>
                                             </li>
                                             <li>
-                                                <a href="#">Contact us</a>
+                                                <a href="contact">Contact us</a>
                                             </li>
                                         </ul>
                                     </div>
@@ -971,7 +979,7 @@
                                         <input type="text" placeholder="Enter your email:">
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="#">SUBSCRIBE NOW</a>
+                                        <a class="default__button" href="javascript:void(0);">SUBSCRIBE NOW</a>
                                     </div>
                                 </div>
                             </div>
